--- a/Project1/colons/index.html
+++ b/Project1/colons/index.html
@@ -12,6 +12,12 @@
     <section>
         <h1> Colon Room</h1>
         <article>
+            <p class="back">
+                ;;;;;;;;;;;;;;;;;;;;;;;;;;;;<br>
+                :::::::::::::::::::::::::::<br>
+                ;;;;;;;;;;;;;;;;;;;;;;;;;;<br>
+                ::::::::::::::::::::::::::
+              </p>
             <a href="../banquet/"><pre id="door">
 +++++++++++++++++++++++++++++++
 +++++++++++++++++++++++++++++++
