--- a/Project1/comma/index.html
+++ b/Project1/comma/index.html
@@ -14,6 +14,12 @@
       <p class="com">What does a comma do.</p>
       <div id="typewriter-box"></div>
       <script type="text/javascript" src="main.js"></script>
+      <p class="back">
+        ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,<br>
+        ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,<br>
+        ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,<br>
+        ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+      </p>
       <div id="doors">
       <a href="../author/">
         <pre id="door">
