--- a/Project1/ending/index.html
+++ b/Project1/ending/index.html
@@ -12,7 +12,7 @@
     <div id = "typewriter-box"></div>
 
     <h1> ? ! ; : , " .</h1>
-    <h2> The End</h2>
+    <h2> The End.</h2>
     <script type="text/javascript" src="main.js"></script>
     
 </body>
