--- a/Project1/periods/index.html
+++ b/Project1/periods/index.html
@@ -12,7 +12,12 @@
     <h1>Period Room</h1>
     <div id="typewriter-box"></div>
     <script type="text/javascript" src="main.js"></script>
-
+    <p class="back">
+      ..............................<br>
+      ..............................<br>
+      ...............................<br>
+      .............................
+    </p>
     <div id="doors">
       <a href="../colons/">
         <pre id="door">
