--- a/Project1/quotation/index.html
+++ b/Project1/quotation/index.html
@@ -13,6 +13,13 @@
     <h1> Quotations</h1>
     <section>
       <article>
+        <p class="back">
+          """""""""""""""""""""""""<br>
+          """""""""""""""""""""""""<br>
+          """""""""""""""""""""""""<br>
+          """""""""""""""""""""""""<br>
+          """""""""""""""""""""""""<br>
+        </p>
         <div>
           <a href="../exclamation">
             <pre id="door">
