--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ XXXXXXXXXXXXXXXXXXXKXKd;;,'..''............................................'''''
     <div><a href="Week3_Colophon"> Week 3 - Colophon</a> </div>
     <div><a href="Week4_Exercise"> Week 4 - Exercise</a> </div>
     <div><a href="Week4_Analysis\html-css-structure-analysis.html"> Week 4 - Analysis</a> </div>
+    <div><a href="Week5_Table"> Week 5 - Table of Contents</a> </div>
   </article>
   <article>
     
