--- a/Week5_Table/f/index.html
+++ b/Week5_Table/f/index.html
@@ -11,59 +11,60 @@
     <h1> Visual Thinking</h1>
     <h2>=</h2>
     <h3> Contents</h3>
+    <h2></h2>
     <p>
         1. Early Stirrings – 1
         Perception torn from thinking.
-        <br>
+        <p>
         2. The Intelligence of Perception (i) – 13
         Perception as cognition.
-        <br>
+        <p>
         3. The Intelligence of Perception (ii) – 37
         Subtracting the context.
-        <br>
+        <p>
         4. Two and Two Together – 54
         Relations depend on structure.
-        <br>
+        <p>
         5. The Past in the Present – 80
         Forces acting on memory.
-        <br>
+        <p>
         6. The Images of Thought – 97
         What are mental images like?
-        <br>
+        <p>
         7. Concepts Take Shape – 116
         Abstract gestures.
-        <br>
+        <p>
         8. Pictures, Symbols, and Signs – 135
         The functions of images.
-        <br>
+        <p>
         9. What Abstraction Is Not – 153
         A harmful dichotomy.
-        <br>
+        <p>
         10. What Abstraction Is – 153
         Types and containers.
-        <br>
+        <p>
         11. With Feet on the Ground – 188
         Abstraction as withdrawl.
-        <br>
+        <p>
         12. Thinking With Pure Shapes – 208
         Numbers reflect life.
-        <br>
+        <p>
         13. Words in Their Place – 226
         Can one think in words?
-        <br>
+        <p>
         14. Art and Thought – 254
         Thinking in children's drawings.
-        <br>
+        <p>
         15. Models for Theory – 274
         Cosmological shapes.
-        <br>
+        <p>
         16. Vision in Education – 294
         What is art for?
         </p>
         <h4>
-        Notes – 317 <br>
-        Bibliogaraphy – 325 <br>
-        Index – 339 <br>
+        Notes – 317 </h4>
+        <h4>Bibliogaraphy – 325</h4>
+        <h4>Index – 339</h4>
         </h4>
         </article>
 </body>
