--- a/Week5_Table/index.html
+++ b/Week5_Table/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 <div class="wrapper">
-  <h1>Table of Contents Explorations</h1>
+    <h3></h3>
+  <h1>Table of Contents</h1><h1> Explorations</h1>
+  <h2></h2>
   <div class="links">
     <a href="a">Sketch 1, one typeface, one type size</a>
     <a href="b">Sketch 2, one typeface, one weight, one type size</a>
