--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ XXXXXXXXXXXXXXXXXXXKXKd;;,'..''............................................'''''
     <div><a href="Week4_Exercise"> Week 4 - Exercise</a> </div>
     <div><a href="Week4_Analysis\html-css-structure-analysis.html"> Week 4 - Analysis</a> </div>
     <div><a href="Week5_Table"> Week 5 - Table of Contents</a> </div>
-    <div><a href="Week6)wIKI"> Week 6 - Wikipedia Randomizer</a> </div>
+    <div><a href="Week6_Wiki"> Week 6 - Wikipedia Randomizer</a> </div>
   </article>
   <article>
     <div><a href="Project1"> Project 1</a></div>
