--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ XXXXXXXXXXXXXXXXXXXKXKd;;,'..''............................................'''''
     <div><a href="Week4_Analysis\html-css-structure-analysis.html"> Week 4 - Analysis</a> </div>
     <div><a href="Week5_Table"> Week 5 - Table of Contents</a> </div>
     <div><a href="Week6_Wiki"> Week 6 - Wikipedia Randomizer</a> </div>
+    <div><a href="Week7_Stilllife/"> Week 7 - Still Life</a> </div>
   </article>
   <article>
     <div><a href="Project1"> Project 1</a></div>
