--- a/js test/typewriter/index.html
+++ b/js test/typewriter/index.html
@@ -10,7 +10,15 @@
 </head>
 <body>
     <div id = "typewriter-box"></div>
-    
+    <div class="svg-container">
+        <svg viewBox="0 0 100 100">
+          <circle cx="50" cy="50" r="40" fill="#e91e63" />
+        </svg>
+        <div class="text-container">
+          <span class="text">Hello, World!</span>
+        </div>
+      </div>
+      
 	<script type="text/javascript" src="script.js"></script>
 
 </body>
