--- a/Project2/index.html
+++ b/Project2/index.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="assets/main.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <link href="assets/main.css" rel="stylesheet" />
     <title>Document</title>
-</head>
-<body>
-    
-
-<script defer src="assets/scripts.js"></script>
-</body>
+  </head>
+  <body>
+    <section>
+      <article>
+        <div class="bar">
+          <h1>Souvenirs Around the World</h1>
+        </div>
+      </article>
+      <article>
+        <img src="assets/photos/map.png" />
+        <div class="totem">
+          <img src="assets/photos/totem.png" alt="Totem Pole">
+          <div class="text-container">
+            <span class="text">Hello, World!</span>
+          </div>
+        </div>        
+      </article>
+      <article>
+        <div class="bar">
+          <button><a href="index.html">MAP</a></button>
+          <button><a href="all/index.html">ALL</a></button>
+          <button type="random">RANDOM</button>
+        </div>
+      </article>
+    </section>
+  </body>
 </html>
