--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ XXXXXXXXXXXXXXXXXXXKXKd;;,'..''............................................'''''
   </article>
   <article>
     <div><a href="Project1"> Project 1</a></div>
+    <div><a href="Project2"> Project 2</a></div>
   </article>
     </section>
 </body>
