--- a/Project2/index.html
+++ b/Project2/index.html
@@ -21,16 +21,16 @@
         </div>
       </article>
       <article>
-        <img src="assets/photos/map.png" />
+        <img src="assets/photos/shokunin_world_map.svg" class="Map">
         <div class="totem">
-          <img src="assets/photos/totem.png" alt="Totem Pole">
+          <img src="assets/photos/totem.png" class="Totem_1">
           <div class="text-container">
             <span class="text">Hello, World!</span>
           </div>
         </div>        
       </article>
       <article>
-        <div class="bar">
+        <div class="bar2">
           <button><a href="index.html">MAP</a></button>
           <button><a href="all/index.html">ALL</a></button>
           <button type="random">RANDOM</button>
