--- a/Project2/index.html
+++ b/Project2/index.html
@@ -21,18 +21,131 @@
         </div>
       </article>
       <article>
-        <img src="assets/photos/shokunin_world_map.svg" class="Map">
-        <div class="totem">
-          <img src="assets/photos/totem.png" class="Totem_1">
-          <div class="text-container">
-            <span class="text">Hello, World!</span>
-          </div>
-        </div>        
+        <img src="assets/photos/shokunin_world_map.svg" class="Map"/>
+
+        <div class="object1">
+          <a href="json/index.html"><img src="assets/photos/1-bali.png"/></a>
+        </div>
+
+        <div class="object2">
+          <a href="json/index.html"><img src="assets/photos/2-bali.png"/></a>
+        </div>
+
+        <div class="object3">
+          <a href="json/index.html"><img src="assets/photos/3-bali.png"/></a>
+        </div>
+
+        <div class="object4">
+          <a href="json/index.html"><img src="assets/photos/4-thailand.png"/></a>
+        </div>
+
+        <div class="object5">
+          <a href="json/index.html"><img src="assets/photos/5-saudi.png"/></a>
+        </div>
+
+        <div class="object6">
+          <a href="json/index.html"><img src="assets/photos/6-africa.png"/></a>
+        </div>
+
+        <div class="object7">
+          <a href="json/index.html"><img src="assets/photos/7-tokyo.png"/></a>
+        </div>
+
+        <div class="object8">
+          <a href="json/index.html"><img src="assets/photos/8-inca.png"/></a>
+        </div>
+
+        <div class="object9">
+          <a href="json/index.html"><img src="assets/photos/9-borobudur.png"/></a>
+        </div>
+
+        <div class="object10">
+          <a href="json/index.html"><img src="assets/photos/10-china.png"/></a>
+        </div>
+
+        <div class="object11">
+          <a href="json/index.html"><img src="assets/photos/11-japan.png"/></a>
+        </div>
+
+        <div class="object12">
+          <a href="json/index.html"><img src="assets/photos/12-peru.png"/></a>
+        </div>
+
+        <div class="object13">
+          <a href="json/index.html"><img src="assets/photos/13-swiss.png"/></a>
+        </div>
+
+        <div class="object14">
+          <a href="json/index.html"><img src="assets/photos/14-canada.png"/></a>
+        </div>
+
+        <div class="object15">
+          <a href="json/index.html"><img src="assets/photos/15-norway.png"/></a>
+        </div>
+
+        <div class="object16">
+          <a href="json/index.html"><img src="assets/photos/16-bali.png"/></a>
+        </div>
+
+        <div class="object17">
+          <a href="json/index.html"><img src="assets/photos/17-croatia.png"/></a>
+        </div>
+
+        <div class="object18">
+          <a href="json/index.html"><img src="assets/photos/18-columbia.png"/></a>
+        </div>
+
+        <div class="object19">
+          <a href="json/index.html"><img src="assets/photos/19-jamaica.png"/></a>
+        </div>
+
+        <div class="object20">
+          <a href="json/index.html"><img src="assets/photos/20-china.png"/></a>
+        </div>
+
+        <div class="object21">
+          <a href="json/index.html"><img src="assets/photos/21-slovenia.png"/></a>
+        </div>
+
+        <div class="object22">
+          <a href="json/index.html"><img src="assets/photos/22-australia.png"/></a>
+        </div>
+
+        <div class="object23">
+          <a href="json/index.html"><img src="assets/photos/23-rome.png"/></a>
+        </div>
+
+        <div class="object24">
+          <a href="json/index.html"><img src="assets/photos/24-canada.png"/></a>
+        </div>
+
+        <div class="object25">
+          <a href="json/index.html"><img src="assets/photos/25-china.png"/></a>
+        </div>
+
+        <div class="object26">
+          <a href="json/index.html"><img src="assets/photos/26-NY.png"/></a>
+        </div>
+
+        <div class="object27">
+          <a href="json/index.html"><img src="assets/photos/27-HK.png"/></a>
+        </div>
+
+        <div class="object28">
+          <a href="json/index.html"><img src="assets/photos/28-mexico.png"/></a>
+        </div>
+
+        <div class="object29">
+          <a href="json/index.html"><img src="assets/photos/29-dubai.png"/></a>
+        </div>
+
+
+
       </article>
       <article>
         <div class="bar2">
           <button><a href="index.html">MAP</a></button>
-          <button><a href="all/index.html">ALL</a></button>
+          <button><a href="json/index.html">ALL</a></button>
           <button type="random">RANDOM</button>
         </div>
       </article>
