--- a/Project2/index.html
+++ b/Project2/index.html
@@ -163,8 +163,8 @@
       </article>
       <article>
         <div class="bar2">
-          <button><a href="index.html">MAP</a></button>
-          <button><a href="json/index.html">ALL</a></button>
+          <button class="all"> TOGGLE ALL</button>
+          <button class="gallery"> GALLERY VIEW</button>
           <button type="random">RANDOM</button>
         </div>
       </article>
