--- a/Project2/index.html
+++ b/Project2/index.html
@@ -18,11 +18,11 @@
       <article>
         <div class="bar">
           <h1>Souvenirs Around the World</h1>
-          <h2> 1970-2023 </h2>
+          <h2>1970-2023</h2>
         </div>
       </article>
       <article>
-        <img class="map" src="assets/photos/shokunin_World_Map.svg" />
+        <img class="map" src="assets/photos/map.svg" />
 
         <div class="object1">
           <a href="json/index.html"><img src="assets/photos/1-bali.png" /></a>
@@ -164,14 +164,14 @@
       </article>
       <article>
         <div class="bar2">
-          <button class="all"> TOGGLE ALL</button>
-          <button class="gallery"> GALLERY VIEW</button>
+          <button class="all">TOGGLE ALL</button>
+          <button class="gallery">GALLERY VIEW</button>
           <button type="random">RANDOM</button>
         </div>
       </article>
       <article>
-      <ol id="collection-list"></ol>
-      <script src="script.js"></script>
+        <ol id="collection-list"></ol>
+        <script src="script.js"></script>
       </article>
     </section>
   </body>
