--- a/Project2/index.html
+++ b/Project2/index.html
@@ -22,7 +22,7 @@
         </div>
       </article>
       <article>
-        <img class="map" src="assets/photos/map.svg" />
+        <img class="map" src="assets\photos\map.svg" />
 
         <div class="object1">
           <a href="json/index.html"><img src="assets/photos/1-bali.png" /></a>
