--- a/Week8_Recipe/index.html
+++ b/Week8_Recipe/index.html
@@ -45,7 +45,7 @@
                 </ol>
             </div>
         </article>
-        <img class="lassi3" src="lassi-3.jpg">
+        <img class="lassi3" src="assets/lassi-3.jpg">
     </section>
 </body>
 </html>
