--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ XXXXXXXXXXXXXXXXXXXKXKd;;,'..''............................................'''''
     <div><a href="Week5_Table"> Week 5 - Table of Contents</a> </div>
     <div><a href="Week6_Wiki"> Week 6 - Wikipedia</a> </div>
     <div><a href="Week7_Stilllife/"> Week 7 - Still Life</a> </div>
-    <div><a href="Week8_Receipe/"> Week 8 - Paper to Screen</a> </div>
+    <div><a href="Week8_Recipe/"> Week 8 - Paper to Screen</a> </div>
   </article>
   <article>
     <div><a href="Project1"> Project 1</a></div>
