--- a/Project2/index.html
+++ b/Project2/index.html
@@ -23,143 +23,125 @@
       </article>
       <article>
         <img class="map" src="assets\photos\new-map.svg" />
+        <div class="row">
+          <div class="column">
+            <div class="object1" button onclick="scrollTo()">
+              <img src="assets/photos/1-bali.png" />
+            </div>
 
-        <div class="object1">
-          <a href="json/index.html"><img src="assets/photos/1-bali.png" /></a>
-        </div>
+            <div class="object2">
+              <img src="assets/photos/2-bali.png" />
+            </div>
 
-        <div class="object2">
-          <a href="json/index.html"><img src="assets/photos/2-bali.png" /></a>
-        </div>
+            <div class="object3">
+              <img src="assets/photos/3-bali.png" />
+            </div>
 
-        <div class="object3">
-          <a href="json/index.html"><img src="assets/photos/3-bali.png" /></a>
-        </div>
+            <div class="object4">
+              <img src="assets/photos/4-thailand.png" />
+            </div>
 
-        <div class="object4">
-          <a href="json/index.html"
-            ><img src="assets/photos/4-thailand.png"
-          /></a>
-        </div>
+            <div class="object5">
+              <img src="assets/photos/5-saudi.png" />
+            </div>
 
-        <div class="object5">
-          <a href="json/index.html"><img src="assets/photos/5-saudi.png" /></a>
-        </div>
+            <div class="object6">
+              <img src="assets/photos/6-africa.png" />
+            </div>
 
-        <div class="object6">
-          <a href="json/index.html"><img src="assets/photos/6-africa.png" /></a>
-        </div>
+            <div class="object7">
+              <img src="assets/photos/7-tokyo.png" />
+            </div>
 
-        <div class="object7">
-          <a href="json/index.html"><img src="assets/photos/7-tokyo.png" /></a>
-        </div>
+            <div class="object8">
+              <img src="assets/photos/8-inca.png" />
+            </div>
 
-        <div class="object8">
-          <a href="json/index.html"><img src="assets/photos/8-inca.png" /></a>
-        </div>
+            <div class="object9">
+              <img src="assets/photos/9-borobudur.png" />
+            </div>
 
-        <div class="object9">
-          <a href="json/index.html"
-            ><img src="assets/photos/9-borobudur.png"
-          /></a>
-        </div>
+            <div class="object10">
+              <img src="assets/photos/10-china.png" />
+            </div>
 
-        <div class="object10">
-          <a href="json/index.html"><img src="assets/photos/10-china.png" /></a>
-        </div>
+            <div class="object11">
+              <img src="assets/photos/11-japan.png" />
+            </div>
 
-        <div class="object11">
-          <a href="json/index.html"><img src="assets/photos/11-japan.png" /></a>
-        </div>
+            <div class="object12">
+              <img src="assets/photos/12-peru.png" />
+            </div>
 
-        <div class="object12">
-          <a href="json/index.html"><img src="assets/photos/12-peru.png" /></a>
-        </div>
+            <div class="object13">
+              <img src="assets/photos/13-swiss.png" />
+            </div>
 
-        <div class="object13">
-          <a href="json/index.html"><img src="assets/photos/13-swiss.png" /></a>
-        </div>
+            <div class="object14">
+              <img src="assets/photos/14-canada.png" />
+            </div>
+          </div>
+          <div class="column">
+            <div class="object15">
+              <img src="assets/photos/15-norway.png" />
+            </div>
 
-        <div class="object14">
-          <a href="json/index.html"
-            ><img src="assets/photos/14-canada.png"
-          /></a>
-        </div>
+            <div class="object16">
+              <img src="assets/photos/16-bali.png" />
+            </div>
 
-        <div class="object15">
-          <a href="json/index.html"
-            ><img src="assets/photos/15-norway.png"
-          /></a>
-        </div>
+            <div class="object17">
+              <img src="assets/photos/17-croatia.png" />
+            </div>
 
-        <div class="object16">
-          <a href="json/index.html"><img src="assets/photos/16-bali.png" /></a>
-        </div>
+            <div class="object18">
+              <img src="assets/photos/18-columbia.png" />
+            </div>
 
-        <div class="object17">
-          <a href="json/index.html"
-            ><img src="assets/photos/17-croatia.png"
-          /></a>
-        </div>
+            <div class="object19">
+              <img src="assets/photos/19-jamaica.png" />
+            </div>
 
-        <div class="object18">
-          <a href="json/index.html"
-            ><img src="assets/photos/18-columbia.png"
-          /></a>
-        </div>
+            <div class="object20">
+              <img src="assets/photos/20-china.png" />
+            </div>
 
-        <div class="object19">
-          <a href="json/index.html"
-            ><img src="assets/photos/19-jamaica.png"
-          /></a>
-        </div>
+            <div class="object21">
+              <img src="assets/photos/21-slovenia.png" />
+            </div>
 
-        <div class="object20">
-          <a href="json/index.html"><img src="assets/photos/20-china.png" /></a>
-        </div>
+            <div class="object22">
+              <img src="assets/photos/22-australia.png" />
+            </div>
 
-        <div class="object21">
-          <a href="json/index.html"
-            ><img src="assets/photos/21-slovenia.png"
-          /></a>
-        </div>
+            <div class="object23">
+              <img src="assets/photos/23-rome.png" />
+            </div>
 
-        <div class="object22">
-          <a href="json/index.html"
-            ><img src="assets/photos/22-australia.png"
-          /></a>
-        </div>
+            <div class="object24">
+              <img src="assets/photos/24-canada.png" />
+            </div>
 
-        <div class="object23">
-          <a href="json/index.html"><img src="assets/photos/23-rome.png" /></a>
-        </div>
+            <div class="object25">
+              <img src="assets/photos/25-china.png" />
+            </div>
 
-        <div class="object24">
-          <a href="json/index.html"
-            ><img src="assets/photos/24-canada.png"
-          /></a>
-        </div>
+            <div class="object26">
+              <img src="assets/photos/26-NY.png" />
+            </div>
 
-        <div class="object25">
-          <a href="json/index.html"><img src="assets/photos/25-china.png" /></a>
-        </div>
+            <div class="object27">
+              <img src="assets/photos/27-HK.png" />
+            </div>
 
-        <div class="object26">
-          <a href="json/index.html"><img src="assets/photos/26-NY.png" /></a>
-        </div>
+            <div class="object28">
+              <img src="assets/photos/28-mexico.png" />
+            </div>
 
-        <div class="object27">
-          <a href="json/index.html"><img src="assets/photos/27-HK.png" /></a>
-        </div>
-
-        <div class="object28">
-          <a href="json/index.html"
-            ><img src="assets/photos/28-mexico.png"
-          /></a>
-        </div>
-
-        <div class="object29">
-          <a href="json/index.html"><img src="assets/photos/29-dubai.png" /></a>
+            <div class="object29">
+              <img src="assets/photos/29-dubai.png" />
+            </div>
+          </div>
         </div>
       </article>
       <article>
