--- a/Project2/index.html
+++ b/Project2/index.html
@@ -32,155 +32,156 @@
           <div class="column">
             <div class="object1">
               <img src="assets/photos/1-bali.png" />
-              <span> 2 Women Dancing </span>
+              <span class="image-text"> 2 Women Dancing </span>
             </div>
 
             <div class="object2">
               <img src="assets/photos/2-bali.png" />
-              <span> Woman on a Swan </span>
+              <span class="image-text"> Woman on a Swan </span>
             </div>
 
             <div class="object3">
               <img src="assets/photos/3-bali.png" />
-              <span> Balancing Woman </span>
+              <span class="image-text"> Balancing Woman </span>
             </div>
 
             <div class="object4">
               <img src="assets/photos/4-thailand.png" />
-              <span> Thai Buddha</span>
+              <span class="image-text"> Thai Buddha</span>
             </div>
 
             <div class="object5">
               <img src="assets/photos/5-saudi.png" />
-              <span> Traditional Lead Pitcher </span>
+              <span class="image-text"> Traditional Lead Pitcher </span>
             </div>
 
             <div class="object6">
               <img src="assets/photos/6-africa.png" />
-              <span> Skinny Man Stick </span>
+              <span class="image-text"> Skinny Man Stick </span>
             </div>
 
             <div class="object7">
               <img src="assets/photos/7-tokyo.png" />
-              <span> Baby Crossing Legs </span>
+              <span class="image-text"> Baby Crossing Legs </span>
             </div>
 
             <div class="object8">
               <img src="assets/photos/8-inca.png" />
-              <span> Mother Holding Baby from Incas </span>
+              <span class="image-text"> Mother Holding Baby from Incas </span>
             </div>
 
             <div class="object9">
               <img src="assets/photos/9-borobudur.png" />
-              <span> Woman on Top of a Swan </span>
+              <span class="image-text"> Woman on Top of a Swan </span>
             </div>
 
             <div class="object10">
               <img src="assets/photos/10-china.png" />
-              <span> Incense in a Glass </span>
+              <span class="image-text"> Incense in a Glass </span>
             </div>
 
             <div class="object11">
               <img src="assets/photos/11-japan.png" />
-              <span> Writing Calligraphy </span>
+              <span class="image-text"> Writing Calligraphy </span>
             </div>
 
             <div class="object12">
               <img src="assets/photos/12-peru.png" />
-              <span> Traditional Wooden Box </span>
+              <span class="image-text"> Traditional Wooden Box </span>
             </div>
 
             <div class="object13">
               <img src="assets/photos/13-swiss.png" />
-              <span> Swiss Mug </span>
+              <span class="image-text"> Swiss Mug </span>
             </div>
 
             <div class="object14">
               <img src="assets/photos/14-canada.png" />
-              <span> Copper Ashtray </span>
+              <span class="image-text"> Copper Ashtray </span>
             </div>
           </div> 
 
           <div class="column">
             <div class="object15">
               <img src="assets/photos/15-norway.png" />
-              <span> Copper Head Statue </span>
+              <span class="image-text"> Copper Head Statue </span>
             </div>
 
             <div class="object16">
               <img src="assets/photos/16-bali.png" />
-              <span> Traditional Wax Painting </span>
+              <span class="image-text"> Traditional Wax Painting </span>
             </div>
 
             <div class="object17">
               <img src="assets/photos/17-croatia.png" />
-              <span> Croatia Painting </span>
+              <span class="image-text"> Croatia Painting </span>
             </div>
 
             <div class="object18">
               <img src="assets/photos/18-columbia.png" />
-              <span> Handmade Wooden Coasters </span>
+              <span class="image-text"> Handmade Wooden Coasters </span>
             </div>
 
             <div class="object19">
               <img src="assets/photos/19-jamaica.png" />
-              <span> Jamaican Dance </span>
+              <span class="image-text"> Jamaican Dance </span>
             </div>
 
             <div class="object20">
               <img src="assets/photos/20-china.png" />
-              <span> Chinese Spoon Rest </span>
+              <span class="image-text"> Chinese Spoon Rest </span>
             </div>
 
             <div class="object21">
               <img src="assets/photos/21-slovenia.png" />
-              <span> Happy Spoon </span>
+              <span class="image-text"> Happy Spoon </span>
             </div>
 
             <div class="object22">
               <img src="assets/photos/22-australia.png" />
-              <span> Koala with a Boomerang</span>
+              <span class="image-text"> Koala with a Boomerang</span>
             </div>
 
             <div class="object23">
               <img src="assets/photos/23-rome.png" />
-              <span> Goose Egg Cup </span>
+              <span class="image-text"> Goose Egg Cup </span>
             </div>
 
             <div class="object24">
               <img src="assets/photos/24-canada.png" />
-              <span> Pencil Holder </span>
+              <span class="image-text"> Pencil Holder </span>
             </div>
 
             <div class="object25">
               <img src="assets/photos/25-china.png" />
-              <span> Jade Shot Glass</span>
+              <span class="image-text"> Jade Shot Glass</span>
             </div>
 
             <div class="object26">
               <img src="assets/photos/26-NY.png" />
-              <span> Marble Coasters </span>
+              <span class="image-text"> Marble Coasters </span>
             </div>
 
             <div class="object27">
               <img src="assets/photos/27-HK.png" />
-              <span> Hong Kong Magnet</span>
+              <span class="image-text"> Hong Kong Magnet</span>
             </div>
 
             <div class="object28">
               <img src="assets/photos/28-mexico.png" />
-              <span> Mexican Magnets </span>
+              <span class="image-text"> Mexican Magnets </span>
             </div>
 
             <div class="object29">
               <img src="assets/photos/29-dubai.png" />
-              <span> Dubai Magnets </span>
+              <span class="image-text"> Dubai Magnets </span>
             </div>
           </div>
         </div>
       </article>
       <article>
         <div class="bar2">
+          <h2 class="text"> This is a collection of my dad's souvenirs from his travels throughout the years. Most of these items were from his travels back in college with his life-long best friend, Steve. Nowadays, all of my dad's travels have been with my mom and I and my dad mainly only buys t-shirts as souvenirs. </h2>
           <button id="toggle-overflow">TOGGLE ALL</button>
           <button onclick="toggleVisibility()">TOGGLE IMG</button>
           <button id="toggleThemeBtn">THEME</button>
