--- a/Project2/index.html
+++ b/Project2/index.html
@@ -181,7 +181,7 @@
       </article>
       <article>
         <div class="bar2">
-          <h2 class="text"> This is a collection of my dad's souvenirs from his travels throughout the years. Most of these items were from his travels back in college with his life-long best friend, Steve. Nowadays, all of my dad's travels have been with my mom and I and my dad mainly only buys t-shirts as souvenirs. </h2>
+          <h2 class="text"> This is a collection of my dad's souvenirs from his travels throughout the years. Most of these items were from his travels back in college with his life-long best friend, Steve. Nowadays, all of my dad's travels have been with my mom and I and my dad mainly only buys t-shirts as souvenirs. Our house is like a museum. </h2>
           <button id="toggle-overflow">TOGGLE ALL</button>
           <button onclick="toggleVisibility()">TOGGLE IMG</button>
           <button id="toggleThemeBtn">THEME</button>
