--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ XXXXXXXXXXXXXXXXXXXKXKd;;,'..''............................................'''''
   <article>
     <div><a href="Project1"> Project 1</a></div>
     <div><a href="Project2"> Project 2</a></div>
+    <div><a href="Project3"> Project 3</a></div>
   </article>
     </section>
 </body>
