--- a/Project3/index.html
+++ b/Project3/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="assets/main.css" rel="stylesheet" />
     <title>Project 3</title>
   </head>
   <body>
     <section>
       <article>
         <div class="bar1">
-          <img src="nyc-logo.png" />
+          <img class="logo" src="assets/photos/nyc-logo.png" />
         </div>
       </article>
       <article>
-        <img src="DNA.jpg" />
+        <div class="semi1"></div>
+        <img class="dna" src="assets/photos/DNA.jpg" />
         <div class="chat">
           <p>
             The following data has been collected in New York City from 2007 to
@@ -22,6 +24,7 @@
             Health and Mental Hygiene (DOHMH).
           </p>
         </div>
+        <div class="semi2"></div>
       </article>
     </section>
     <section>
