--- a/Project3/index.html
+++ b/Project3/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="assets/main.css" rel="stylesheet" />
+    <link href="assets/main.css" rel="stylesheet" /><link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Project 3</title>
   </head>
   <body>
@@ -40,24 +42,72 @@
         </div>
         <div class="fact">
           <p>
-            There are 6 different subcategories of diseases and 11 recorded
+            There are <b>6</b> different subcategories of diseases and <b>11</b> recorded
             diseases recorded in New York City.
           </p>
         </div>
-        <div class="circle2"></div>
+        <div class="circle1"></div>
       </article>
       <article>
         <!-- Graph goes here-->
+        <ul class="diseases">
+          <li class="disease-header">Neurological Diseases</li>
+          <li><span class="circle blue"></span>Parkinson's Disease</li>
+          <li><span class="circle blue"></span>Alzheimer's Disease</li>
+        </ul>
+        <ul class="diseases">
+          <li class="disease-header">Respiratory Diseases</li>
+          <li><span class="circle blue"></span>Chronic Lower Respiratory Disease</li>
+        </ul>
+        <ul class="diseases">
+          <li class="disease-header">Renal Diseases</li>
+          <li><span class="circle blue"></span>Essential Hypertension Disease</li>
+          <li><span class="circle blue"></span>Renal Disease</li>
+        </ul>
+        <ul class="diseases">
+          <li class="disease-header">Infectious Diseases</li>
+          <li><span class="circle blue"></span>Immunodeficiency Virus Disease</li>
+          <li><span class="circle blue"></span>Influenza and Pneumonia</li>
+          <li><span class="circle blue"></span>Viral Hepatitis</li>
+        </ul>
+        <ul class="diseases">
+          <li class="disease-header">Cardiovascular Diseases</li>
+          <li><span class="circle blue"></span>Aortic Aneurysm</li>
+          <li><span class="circle blue"></span>Cerebrovascular Disease</li>
+          <li><span class="circle blue"></span>Heart Disease</li>
+        </ul>
+        <ul class="diseases">
+          <li class="disease-header">Liver Diseases</li>
+          <li><span class="circle blue"></span>Chronic Liver Disease</li>
+          <li><span class="circle blue"></span>Cirrhosis</li>
+        </ul>
+        <div class="circle2"></div>
       </article>
       <article>
-        <h2>533,306 diagnosed</h2>
-        <div class="circle2"></div>
+        <h3>533,306</h2> 
+        <h3>diagnosed</h2>
+          <div class="circle1"></div>
         <div class="fact">
-            <p> Out of the 533,306 people diagnosed, 280,527 were female. That estimates to about 52.6% of diagnosed patients were female!</p>
+            <p> Out of the 533,306 people diagnosed, 280,527 were female. That estimates to about <b>52.6%</b> of diagnosed patients were female!</p>
         </div>
         <!-- Gender pi chart goes here-->
+        <div class="chart">
+          <div class="slice female"></div>
+          <div class="slice male"></div>
+          <div class="key">
+            <div class="female-key"></div>
+            <span>Female (52.6%)</span>
+            <div class="male-key"></div>
+            <span>Male (47.4%)</span>
+          </div>
+        </div>
+        <div class="circle1"></div>
+        <div class="circle2"></div>
       </article>
-      <article>
+      <article>        
+      <div class="chat1">
+        <p> Heart disease is the leading cause of death in the United States. It includes conditions such as coronary artery disease and heart failures.</p>
+      </div>
         <!-- Word cloud goes here-->
       </article>
     </section>
