--- a/Project3/index.html
+++ b/Project3/index.html
@@ -88,7 +88,7 @@
         <h3>diagnosed</h3>
           <div class="circle1"></div>
         <div class="fact">
-            <p> Out of the 533,306 people diagnosed, 280,527 were female. That estimates to about <span class="fifty">52.6%</span> of diagnosed patients were female!</p>
+            <p> Out of the 533,306 people diagnosed, 280,527 were female. That estimates to about <span class="fifty">52.6%</span> of diagnosed patients were <b>female!</b></p>
         </div>
         <!-- Gender pi chart goes here-->
         <div class="chart">
@@ -105,7 +105,7 @@
       </article>
       <article class="block">        
       <div class="fact">
-          <p> The prevalence of diseases in New York City was disproportionately higher among the white population compared to other racial and ethnic groups.</p>
+          <p> The prevalence of diseases in New York City was disproportionately <b>higher</b> among the <b>white / caucasian</b> population compared to other racial and ethnic groups.</p>
       </div>
         <!-- Bar Graph goes here-->
         <div class="bar white">
@@ -141,6 +141,13 @@
       <article>
         <div class="circle1"></div>
         <div class="circle2"></div>
+      </article>
+      <div class="gradient"></div>
+    </section>
+    <section class="death">
+      <article>
+        <div id="count">697,357</div> 
+        <h3>victims</h3>
       </article>
     </section>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
