--- a/Project3/index.html
+++ b/Project3/index.html
@@ -147,7 +147,7 @@
     <section class="death">
       <article>
         <div id="count">697,357</div> 
-        <h3>victims</h3>
+        <h3>deaths</h3>
       </article>
     </section>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
