--- a/Project3/index.html
+++ b/Project3/index.html
@@ -124,7 +124,7 @@
         </div>
         
         <div class="bar asian">
-          <div class="label">Asian</div>
+          <div class="label">Asian and Pacific Islander</div>
           <div class="value">48,462</div>
         </div>
         
@@ -136,6 +136,9 @@
         <div class="bar unknown">
           <div class="label">Not Stated / Unknown</div>
           <div class="value">9,182</div>
+        </div>
+        <div class="fact2">
+          <p>9,182 individuals did not state their ethnicity in the data provided by the Department of Health and Mental Hygiene (DOHMH). One possibility is that these individuals chose not to disclose their ethnicity for personal or cultural reasons. Another possibility is that the information was not collected or recorded properly by healthcare providers or public health officials. </p>
         </div>
       </article>
       <article>
