--- a/Project3/index.html
+++ b/Project3/index.html
@@ -189,7 +189,7 @@
         <div class="circle4"></div>
       </article>
       
-	<div style="width: 1-00px">
+	<div style="width: 1-00px; margin: 2em">
 		<canvas id="myChart"></canvas>
 	</div>
       
