--- a/Project3/index.html
+++ b/Project3/index.html
@@ -189,10 +189,10 @@
         <div class="circle4"></div>
       </article>
       <article>
-        <div class="fact" style="margin:0 0 -4em 0">
+        <div class="fact" style="margin: 0 0 -4em 0">
           <p><b> Number of Deaths per Year </b></p>
         </div>
-        <div style="width: 1100px; margin: 1em">
+        <div style="width: 1100px; margin: 1em; color: #ddd">
           <canvas id="myChart"></canvas>
         </div>
 
@@ -205,6 +205,9 @@
         </div>
 
         <div class="circle5"></div>
+        <div style="width: 1000px; margin: 1em">
+          <canvas id="myPieChart"></canvas>
+        </div>
       </article>
       <flow class="sort">
         <label for="sort-by">Sort by:</label>
