--- a/Project3/index.html
+++ b/Project3/index.html
@@ -187,6 +187,11 @@
         </div>
         <div class="circle5"></div>
         <div class="circle4"></div>
+        
+        <div style="width: 1000px; margin: 1em">
+          <canvas id="myPieChart"></canvas>
+        </div>
+        <div class="circle5"></div>
       </article>
       <article>
         <div class="fact" style="margin: 0 0 -4em 0">
@@ -205,9 +210,6 @@
         </div>
 
         <div class="circle5"></div>
-        <div style="width: 1000px; margin: 1em">
-          <canvas id="myPieChart"></canvas>
-        </div>
       </article>
       <flow class="sort">
         <label for="sort-by">Sort by:</label>
