--- a/Project3/index.html
+++ b/Project3/index.html
@@ -178,6 +178,13 @@
       <article>
         <div id="count">697,357</div>
         <h3>deaths</h3>
+        <div class="circle5"></div>
+        <div class="circle4"></div>
+
+        <div style="width: 900px; margin: 1em">
+          <canvas id="myPieChart"></canvas>
+        </div>
+
         <div class="fact">
           <p>
             Heart disease is the leading cause of death in the United States.
@@ -187,13 +194,12 @@
         </div>
         <div class="circle5"></div>
         <div class="circle4"></div>
-        
-        <div style="width: 1000px; margin: 1em">
-          <canvas id="myPieChart"></canvas>
-        </div>
-        <div class="circle5"></div>
       </article>
       <article>
+        <div id="count">164,051</div>
+        <h4>unnatural deaths</h4>
+
+        <div class="circle5"></div>
         <div class="fact" style="margin: 0 0 -4em 0">
           <p><b> Number of Deaths per Year </b></p>
         </div>
@@ -208,8 +214,8 @@
             magnitude of mortality and public health challenges facing the city.
           </p>
         </div>
-
         <div class="circle5"></div>
+        <div class="circle4"></div>
       </article>
       <flow class="sort">
         <label for="sort-by">Sort by:</label>
@@ -244,6 +250,11 @@
         </thead>
         <tbody></tbody>
       </table>
+      <div class="fact">
+        <p>
+        Are <b>you</b> next?   
+        </p>
+      </div>
     </section>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <script src="script.js"></script>
