--- a/Project3/index.html
+++ b/Project3/index.html
@@ -217,6 +217,10 @@
         <div class="circle5"></div>
         <div class="circle4"></div>
       </article>
+
+      <div class="fact">
+        <p><b> Leading Causes of Death Full Data Set </b></p>
+      </div>
       <flow class="sort">
         <label for="sort-by">Sort by:</label>
         <select id="sort-by">
@@ -251,9 +255,7 @@
         <tbody></tbody>
       </table>
       <div class="fact">
-        <p>
-        Are <b>you</b> next?   
-        </p>
+        <p>Are <b>you</b> next?</p>
       </div>
     </section>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
