--- a/Week7_Stilllife/index.html
+++ b/Week7_Stilllife/index.html
@@ -34,6 +34,6 @@
 
       </div>
     </div>
-    <a href="animated/index.html">Animated Version >>></a>
+    <a href="animated">Animated Version >>></a>
   </body>
 </html>
